--- a/ITManager/ITManager/Views/SearchView.xaml
+++ b/ITManager/ITManager/Views/SearchView.xaml
@@ -2,11 +2,96 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ITManager.Views"
-             mc:Ignorable="d" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.Resources>
+            <DataTemplate x:Key="DropDownItemTemplate" DataType="wpfApplication1:ItemSourceModel">
+                <CheckBox Content="{Binding Name}"
+                              IsChecked="{Binding Path=IsChecked, Mode=TwoWay}"
+                              Tag="{RelativeSource FindAncestor, 
+                              AncestorType={x:Type ComboBox}}">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Checked">
+                            <i:InvokeCommandAction Command="{Binding DataContext.CheckedCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding .}"/>
+                        </i:EventTrigger>
+                        <i:EventTrigger EventName="Unchecked">
+                            <i:InvokeCommandAction Command="{Binding DataContext.UncheckedCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding .}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </CheckBox>
+            </DataTemplate>
+
+            <DataTemplate x:Key="SelectionBoxTemplate">
+
+            </DataTemplate>
+
+            <DataTemplate x:Key="ComboBoxTemplate">
+                <ContentPresenter x:Name="Presenter"
+               Content="{Binding}"
+               ContentTemplate="{StaticResource DropDownItemTemplate}" />
+                <DataTemplate.Triggers>
+                    <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor,ComboBoxItem,1}}" Value="{x:Null}">
+                        <Setter TargetName="Presenter" Property="ContentTemplate" Value="{StaticResource SelectionBoxTemplate}" />
+                    </DataTrigger>
+                </DataTemplate.Triggers>
+            </DataTemplate>
+        </Grid.Resources>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal">
+            <StackPanel Margin="20 0 0 0">
+                <Label Content="Selected skills:" Margin="-5 0 0 0" FontSize="16"/>
+                <TextBlock Text="{Binding SelectedItemsText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                       Margin="0 0 0 20"
+                       Width="300"
+                       TextWrapping="Wrap"/>
+                <ComboBox ItemsSource="{Binding Skills}"
+                          ItemTemplate="{StaticResource ComboBoxTemplate}"
+                          Width="300"/>
+
+            </StackPanel>
+            <Button Content="Search"
+                    Style="{StaticResource DefaultButtonStyle}"
+                    Width="100" Height="30" Margin="20 0 0 0" 
+                    Command="{Binding SearchCommand}"
+                    VerticalAlignment="Bottom"/>
+        </StackPanel>
+        <ListBox ItemsSource="{Binding SearchedUsers}" 
+                 Margin="20 20 0 0"
+                 Grid.Row="1">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="PreviewMouseLeftButtonDown">
+                                <i:InvokeCommandAction Command="{Binding DataContext.NavigateToUserCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
+                                                       CommandParameter="{Binding .}"/>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                        <Label>
+                            <Label.Content>
+                                <TextBlock FontSize="16" Foreground="{StaticResource DefaultAppColor}">
+                                    <TextBlock.Text>
+                                        <MultiBinding StringFormat="{}{0} {1}">
+                                            <Binding Path="Name"/>
+                                            <Binding Path="Surname"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+                            </Label.Content>
+                        </Label>
+                        <Label Content="{Binding Persent, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" FontSize="16"/>
+                        <Label Content="%" FontSize="16"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </UserControl>
